--- a/bibliography.bib
+++ b/bibliography.bib
@@ -109,7 +109,7 @@
 }
 
 @misc{circuitdigestandgate,
-  title = {Designing an AND Gate using Transistors},
+  title = {Designing an {AND} Gate using Transistors},
   date = {2023-09-14},
   year = {2023},
   file = {:./references/electronic-circuits-designing-and-gate-using-transistors.html:html},
