--- a/bibliography.bib
+++ b/bibliography.bib
@@ -116,3 +116,11 @@
   url = {https://circuitdigest.com/electronic-circuits/designing-and-gate-using-transistors},
   urldate = {2023-09-14}
 }
+
+@misc{nandlogicwiki,
+  title = {NAND logic - Wikipedia},
+  date = {2023-09-02},
+  year = {2023},
+  url = {https://en.wikipedia.org/wiki/NAND_logic},
+  urldate = {2023-09-16}
+}
