--- a/boolean_logic_gates.tex
+++ b/boolean_logic_gates.tex
@@ -33,6 +33,7 @@
 \end{table}
 
 \section{Universal nand}
+\marginnote{\bibentry{nandlogicwiki}}
 \begin{figure}
 \begin{circuitikz}
   \draw
@@ -98,4 +99,4 @@ $g_i : \{0,1\}^2 \rightarrow \{0,1\}$
   1 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 \\
 \end{tabular}
 
-\end{document}  
+\end{document}
