--- a/bibliography.bib
+++ b/bibliography.bib
@@ -124,3 +124,12 @@
   url = {https://en.wikipedia.org/wiki/NAND_logic},
   urldate = {2023-09-16}
 }
+
+@misc{photoelectriceffectbritannica,
+  title = {Photoelectric effect -- Britannica},
+  date = {2023-08-16},
+  year = {2023},
+  file = {:./references/science-photoelectric-effect.html:html},
+  url = {https://www.britannica.com/science/photoelectric-effect},
+  urldate = {2023-09-17}
+}
