--- a/electrons_and_photons.tex
+++ b/electrons_and_photons.tex
@@ -55,6 +55,7 @@
   \draw[lightbulb] (5,3) node[circle,fill=violet,draw=gray!50] {}  -- (vacc.tube bottom center);
   \end{circuitikz}
 \end{figure}
+\marginnote{\bibentry{photoelectriceffectbritannica}}
 
 \begin{figure}
 \begin{tikzpicture}[
