--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2,134 +2,117 @@
   title = {Policies and Regulations},
   author = {Atlantic Technological University},
   year = 2023,
-  howpublished = {\\See \url{https://studenthub.atu.ie} for more.}
+  howpublished = {\\See \url{https://studenthub.atu.ie} for more.},
 }
-
 @misc{git,
   title = {Git},
   author = {{S}oftware {F}reedom {C}onservancy},
   year = 2023,
-  howpublished = {\\ \url{https://git-scm.com/}}
+  howpublished = {\\ \url{https://git-scm.com/}},
 }
-
 @misc{github,
   title = {Git{H}ub},
   author = {Git{H}ub, Inc.},
   year = 2023,
-  howpublished = {\\ \url{https://github.com/}}
+  howpublished = {\\ \url{https://github.com/}},
 }
-
 @misc{golangnewton,
   title = {A Tour of Go},
   year = 2023,
   url = {https://go.dev/tour/flowcontrol/8},
   urldate = {2023-08-18},
   date = {2023-08-18},
-  file = {:./references/tour-flowcontrol-8.html:html}
 }
-
 @misc{irisdataset,
   title = {{I}ris -- {UCI} {M}achine {L}earning {R}epository},
   year = 2023,
   url = {https://archive.ics.uci.edu/dataset/53/iris},
   urldate = {2023-08-17},
   date = {2023-08-17},
-  file = {:./references/dataset-53-iris.html:html}
 }
-
 @misc{newtonsqrt,
-  title = {Square Roots via Newton’s Method},
+  title = {Square Roots via Newton's Method},
   year = 2015,
   url = {https://math.mit.edu/~stevenj/18.335/newton-sqrt.pdf},
   urldate = {2023-08-18},
   date = {2015-02-04},
-  file = {:./references/~stevenj-18.335-newton-sqrt.pdf.html:html}
 }
-
 @misc{quantacollatz,
-  title = {The Simple Math Problem We Still Can't Solve | Quanta Magazine},
+  title = {The Simple Math Problem We Still Can't Solve \vert{} Quanta Magazine},
   year = 2020,
   url = {https://www.quantamagazine.org/why-mathematicians-still-cant-solve-the-collatz-conjecture-20200922/},
   urldate = {2023-08-18},
   date = {2020-09-22},
-  file = {:./references/why-mathematicians-still-cant-solve-the-collatz-conjecture-20200922-.html:html}
 }
-
 @misc{atustudenthub,
   title = {ATU Student Hub},
   year = 2023,
   url = {https://studenthub.atu.ie/},
   urldate = {2023-08-20},
   date = {2023-08-09},
-  file = {:./references/.html:html}
 }
-
 @misc{qiskitdeutsch,
-  title = {Quantum query algorithms | IBM Quantum Learning},
+  title = {Quantum query algorithms \vert{} IBM Quantum Learning},
   year = 2023,
-  url = {https://learning.quantum-computing.ibm.com/course/fundamentals-of-quantum-algorithms/quantum-query-algorithms#deutschs-algorithm},
+  url = {https://learning.quantum-computing.ibm.com/course/fundamentals-of-quantum-algorithms/quantum-query-algorithms\#deutschs-algorithm},
   urldate = {2023-08-20},
   date = {2023-08-20},
-  file = {:./references/course-fundamentals-of-quantum-algorithms-quantum-query-algorithms.html:html}
 }
-
 @misc{qiskit,
   title = {Qiskit},
   year = 2023,
   url = {https://qiskit.org/},
   urldate = {2023-08-20},
   date = {2023-08-20},
-  file = {:./references/.html:html}
 }
-
-
 @misc{sanglardfloatingpoint,
   title = {Floating Point Visually Explained},
-  date = {2023-08-23},
-  year = {2023},
   author = {{F}abien {S}anglard},
-  url = {https://fabiensanglard.net/floating_point_visually_explained/},
-  urldate = {2023-09-14}
+  year = 2023,
+  url = {https://fabiensanglard.net/floating\_point\_visually\_explained/},
+  urldate = {2023-09-14},
+  date = {2023-08-23},
 }
-
 @misc{ibm2nm,
-  title = {Introducing the world's first 2 nm node chip | IBM Research Blog},
-  date = {2023-08-03},
-  year = {2023},
+  title = {Introducing the world's first 2 nm node chip \vert{} IBM Research Blog},
+  year = 2023,
   url = {https://research.ibm.com/blog/2-nm-chip},
-  urldate = {2023-09-14}
+  urldate = {2023-09-14},
+  date = {2023-08-03},
 }
-
 @misc{oraclefloatingpoint,
   title = {What Every Computer Scientist Should Know About Floating-Point Arithmetic},
+  year = 2023,
+  url = {https://docs.oracle.com/cd/E19957-01/806-3568/ncg\_goldberg.html},
+  urldate = {2023-09-14},
   date = {2023-09-14},
-  year = {2023},
-  url = {https://docs.oracle.com/cd/E19957-01/806-3568/ncg_goldberg.html},
-  urldate = {2023-09-14}
 }
-
 @misc{circuitdigestandgate,
   title = {Designing an {AND} Gate using Transistors},
-  date = {2023-09-14},
-  year = {2023},
-  file = {:./references/electronic-circuits-designing-and-gate-using-transistors.html:html},
+  year = 2023,
   url = {https://circuitdigest.com/electronic-circuits/designing-and-gate-using-transistors},
-  urldate = {2023-09-14}
+  urldate = {2023-09-14},
+  date = {2023-09-14},
 }
-
 @misc{nandlogicwiki,
   title = {NAND logic - Wikipedia},
+  year = 2023,
+  url = {https://en.wikipedia.org/wiki/NAND\_logic},
+  urldate = {2023-09-16},
   date = {2023-09-02},
-  year = {2023},
-  url = {https://en.wikipedia.org/wiki/NAND_logic},
-  urldate = {2023-09-16}
 }
-
 @misc{photoelectriceffectbritannica,
   title = {Photoelectric effect -- Britannica},
-  date = {2023-08-16},
-  year = {2023},
-  file = {:./references/science-photoelectric-effect.html:html},
+  author = {Britannica, T. Editors of Encyclopaedia},
+  year = 2023,
   url = {https://www.britannica.com/science/photoelectric-effect},
-  urldate = {2023-09-17}
+  urldate = {2023-09-17},
+  date = {2023-08-16},
+}
+@misc{chemlibreh2spectrum,
+  title = {7.3: The Atomic Spectrum of Hydrogen -- Chemistry LibreTexts},
+  year = 2015,
+  url = {https://chem.libretexts.org/Courses/Solano\_Community\_College/Chem\_160/Chapter\_07\%3A\_Atomic\_Structure\_and\_Periodicity/7.03\_The\_Atomic\_Spectrum\_of\_Hydrogen},
+  urldate = {2023-09-17},
+  date = {2015-06-20},
 }
