--- a/electrons_and_photons.tex
+++ b/electrons_and_photons.tex
@@ -97,4 +97,12 @@
   \draw[electron] (67.5:5) circle (0.1);
 \end{tikzpicture}
 
+
+\begin{marginfigure}[-90mm]
+  \includegraphics[width=50mm]{img/hydrogen_spectrum_2.jpg}
+  \caption*{Hydrogen spectrum.}
+\end{marginfigure}
+
+\marginnote[-30mm]{\bibentry{chemlibreh2spectrum}}
+
 \end{document}
