--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4,6 +4,27 @@
   year = 2023,
   howpublished = {\\See \url{https://studenthub.atu.ie} for more.},
 }
+@misc{atustudenthub,
+  title = {ATU Student Hub},
+  year = 2023,
+  url = {https://studenthub.atu.ie/},
+  urldate = {2023-08-20},
+  date = {2023-08-09},
+}
+@misc{chemlibreh2spectrum,
+  title = {7.3: The Atomic Spectrum of Hydrogen -- Chemistry LibreTexts},
+  year = 2015,
+  url = {https://chem.libretexts.org/Courses/Solano\_Community\_College/Chem\_160/Chapter\_07\%3A\_Atomic\_Structure\_and\_Periodicity/7.03\_The\_Atomic\_Spectrum\_of\_Hydrogen},
+  urldate = {2023-09-17},
+  date = {2015-06-20},
+}
+@misc{circuitdigestandgate,
+  title = {Designing an {AND} Gate using Transistors},
+  year = 2023,
+  url = {https://circuitdigest.com/electronic-circuits/designing-and-gate-using-transistors},
+  urldate = {2023-09-14},
+  date = {2023-09-14},
+}
 @misc{git,
   title = {Git},
   author = {{S}oftware {F}reedom {C}onservancy},
@@ -23,12 +44,33 @@
   urldate = {2023-08-18},
   date = {2023-08-18},
 }
+@misc{ibm2nm,
+  title = {Introducing the world's first 2 nm node chip \vert{} IBM Research Blog},
+  year = 2023,
+  url = {https://research.ibm.com/blog/2-nm-chip},
+  urldate = {2023-09-14},
+  date = {2023-08-03},
+}
 @misc{irisdataset,
   title = {{I}ris -- {UCI} {M}achine {L}earning {R}epository},
   year = 2023,
   url = {https://archive.ics.uci.edu/dataset/53/iris},
   urldate = {2023-08-17},
   date = {2023-08-17},
+}
+@misc{mathworldlatinsquare,
+  title = {Latin Square -- from Wolfram MathWorld},
+  year = 2023,
+  url = {https://mathworld.wolfram.com/LatinSquare.html},
+  urldate = {2023-09-18},
+  date = {2023-09-18},
+}
+@misc{nandlogicwiki,
+  title = {NAND logic - Wikipedia},
+  year = 2023,
+  url = {https://en.wikipedia.org/wiki/NAND\_logic},
+  urldate = {2023-09-16},
+  date = {2023-09-02},
 }
 @misc{newtonsqrt,
   title = {Square Roots via Newton's Method},
@@ -37,69 +79,12 @@
   urldate = {2023-08-18},
   date = {2015-02-04},
 }
-@misc{quantacollatz,
-  title = {The Simple Math Problem We Still Can't Solve \vert{} Quanta Magazine},
-  year = 2020,
-  url = {https://www.quantamagazine.org/why-mathematicians-still-cant-solve-the-collatz-conjecture-20200922/},
-  urldate = {2023-08-18},
-  date = {2020-09-22},
-}
-@misc{atustudenthub,
-  title = {ATU Student Hub},
-  year = 2023,
-  url = {https://studenthub.atu.ie/},
-  urldate = {2023-08-20},
-  date = {2023-08-09},
-}
-@misc{qiskitdeutsch,
-  title = {Quantum query algorithms \vert{} IBM Quantum Learning},
-  year = 2023,
-  url = {https://learning.quantum-computing.ibm.com/course/fundamentals-of-quantum-algorithms/quantum-query-algorithms\#deutschs-algorithm},
-  urldate = {2023-08-20},
-  date = {2023-08-20},
-}
-@misc{qiskit,
-  title = {Qiskit},
-  year = 2023,
-  url = {https://qiskit.org/},
-  urldate = {2023-08-20},
-  date = {2023-08-20},
-}
-@misc{sanglardfloatingpoint,
-  title = {Floating Point Visually Explained},
-  author = {{F}abien {S}anglard},
-  year = 2023,
-  url = {https://fabiensanglard.net/floating\_point\_visually\_explained/},
-  urldate = {2023-09-14},
-  date = {2023-08-23},
-}
-@misc{ibm2nm,
-  title = {Introducing the world's first 2 nm node chip \vert{} IBM Research Blog},
-  year = 2023,
-  url = {https://research.ibm.com/blog/2-nm-chip},
-  urldate = {2023-09-14},
-  date = {2023-08-03},
-}
 @misc{oraclefloatingpoint,
   title = {What Every Computer Scientist Should Know About Floating-Point Arithmetic},
   year = 2023,
   url = {https://docs.oracle.com/cd/E19957-01/806-3568/ncg\_goldberg.html},
   urldate = {2023-09-14},
   date = {2023-09-14},
-}
-@misc{circuitdigestandgate,
-  title = {Designing an {AND} Gate using Transistors},
-  year = 2023,
-  url = {https://circuitdigest.com/electronic-circuits/designing-and-gate-using-transistors},
-  urldate = {2023-09-14},
-  date = {2023-09-14},
-}
-@misc{nandlogicwiki,
-  title = {NAND logic - Wikipedia},
-  year = 2023,
-  url = {https://en.wikipedia.org/wiki/NAND\_logic},
-  urldate = {2023-09-16},
-  date = {2023-09-02},
 }
 @misc{photoelectriceffectbritannica,
   title = {Photoelectric effect -- Britannica},
@@ -109,10 +94,40 @@
   urldate = {2023-09-17},
   date = {2023-08-16},
 }
-@misc{chemlibreh2spectrum,
-  title = {7.3: The Atomic Spectrum of Hydrogen -- Chemistry LibreTexts},
-  year = 2015,
-  url = {https://chem.libretexts.org/Courses/Solano\_Community\_College/Chem\_160/Chapter\_07\%3A\_Atomic\_Structure\_and\_Periodicity/7.03\_The\_Atomic\_Spectrum\_of\_Hydrogen},
-  urldate = {2023-09-17},
-  date = {2015-06-20},
+@misc{qiskit,
+  title = {Qiskit},
+  year = 2023,
+  url = {https://qiskit.org/},
+  urldate = {2023-08-20},
+  date = {2023-08-20},
+}
+@misc{qiskitdeutsch,
+  title = {Quantum query algorithms \vert{} IBM Quantum Learning},
+  year = 2023,
+  url = {https://learning.quantum-computing.ibm.com/course/fundamentals-of-quantum-algorithms/quantum-query-algorithms\#deutschs-algorithm},
+  urldate = {2023-08-20},
+  date = {2023-08-20},
+}
+@misc{quantacollatz,
+  title = {The Simple Math Problem We Still Can't Solve \vert{} Quanta Magazine},
+  year = 2020,
+  url = {https://www.quantamagazine.org/why-mathematicians-still-cant-solve-the-collatz-conjecture-20200922/},
+  urldate = {2023-08-18},
+  date = {2020-09-22},
+}
+@misc{sanglardfloatingpoint,
+  title = {Floating Point Visually Explained},
+  author = {{F}abien {S}anglard},
+  year = 2023,
+  url = {https://fabiensanglard.net/floating\_point\_visually\_explained/},
+  urldate = {2023-09-14},
+  date = {2023-08-23},
+}
+@misc{musto2016quantum,
+      title={Quantum Latin squares and unitary error bases}, 
+      author={Benjamin Musto and Jamie Vicary},
+      year={2016},
+      eprint={1504.02715},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph}
 }
