--- a/bibliography.bib
+++ b/bibliography.bib
@@ -131,3 +131,10 @@
       archivePrefix={arXiv},
       primaryClass={quant-ph}
 }
+@misc{qiskitentanglement,
+  title = {Multiple qubits and entanglement},
+  date = {2023-09-20},
+  year = {2023},
+  url = {https://learn.qiskit.org/course/ch-gates/introduction},
+  urldate = {2023-09-20}
+}
