--- a/quantum_latin_squares.tex
+++ b/quantum_latin_squares.tex
@@ -33,7 +33,7 @@ An $n \times n$ array of elements in $\mathbb{C}^n$ such that each row and each 
     \ket{3} & \ket{0} & \ket{1} & \ket{2} \\
   };
 \end{tikzpicture}
-\caption{From Latin Square.}
+\caption{Latin Square.}
 \end{marginfigure}
 
 \section{Normality}
