--- a/entanglement.tex
+++ b/entanglement.tex
@@ -71,4 +71,25 @@ $\frac{1}{\sqrt{2}}\begin{bmatrix}
 $\begin{bmatrix} 1 \\ 0 \\ 0 \\ 1 \end{bmatrix} \rightarrow \frac{1}{\sqrt{2}} \ket{00} + \frac{1}{\sqrt{2}} \ket{11} \neq \ket{a} \otimes \ket{b}$
 
 
+\subsection{Alternative Calculation}
+$(\mathsf{H} \otimes \mathsf{I})\ket{00} = 
+\frac{1}{\sqrt{2}}\begin{bmatrix}
+  1 & 0 &  1 &  0 \\
+  0 & 1 &  0 &  1 \\
+  1 & 0 & -1 &  0 \\
+  0 & 1 &  0 & -1 \\
+\end{bmatrix}
+\begin{bmatrix} 1 \\ 0 \\ 0 \\ 0 \end{bmatrix} = 
+\frac{1}{\sqrt{2}}\begin{bmatrix} 1 \\ 0 \\ 1 \\ 0 \end{bmatrix}$\\[4mm]
+$\mathsf{CNOT}(\mathsf{H} \otimes \mathsf{I})\ket{00} = 
+\begin{bmatrix}
+  1 & 0 & 0 & 0 \\
+  0 & 1 & 0 & 0 \\
+  0 & 0 & 0 & 1 \\
+  0 & 0 & 1 & 0 \\
+\end{bmatrix}
+\frac{1}{\sqrt{2}}\begin{bmatrix} 1 \\ 0 \\ 1 \\ 0 \end{bmatrix}
+= \frac{1}{\sqrt{2}}\begin{bmatrix} 1 \\ 0 \\ 0 \\ 1 \end{bmatrix}
+$
+
 \end{document}
